--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 
         <ul>
             <li>
-                <a href="#">Inscrev-se no NLW</a>
+                <a href="#">Instagram</a>
             </li>
             <li>
-                <a href="#">Baixar meu Ebook</a>
+                <a href="#">linkedin</a>
             </li>
             <li>
-                <a href="#">Ver meu portifólio</a>
+                <a href="#">Github</a>
             </li>
             <li>
-                <a href="https://www.rocketseat.com.br/?utm_source=google&utm_medium=cpc&utm_campaign=lead&utm_term=perpetuo&utm_content=institucional-lead-home-texto-lead-brandkws-none-none-institucional-none-none-br-google&gad_source=1&gclid=Cj0KCQiA-5a9BhCBARIsACwMkJ5CPDBeGN8dTD9C1vF2CbL091c6zZT2xokYhN2vn4mWaySaDW8lxLwaArTXEALw_wcB" target="_blank">Conheça o Explorer</a>
+                <a href="" target="_blank">Curriculo</a>
             </li>
         </ul>
         <div id="social-links">
@@ -44,7 +44,7 @@
             <a href="" target="_blank">
             <ion-icon name="logo-instagram"></ion-icon></a>
             <a href="" target="_blank">
-            <ion-icon name="logo-youtube"></ion-icon></a>
+            <ion-icon name="document-attach-outline"></ion-icon></a>
             <a href="" target="_blank">
             <ion-icon name="logo-linkedin"></ion-icon></a>
         </div>
@@ -56,7 +56,7 @@
     <script src="./script.js"></script>
     
     <footer>
-        Feito com ♥ pela <a href="https://app.rocketseat.com.br/?type=ALL">Rocketseat</a>
+        Feito com ♥  <a href=""><i>Igor Lima</i></a>
     </footer>
 </body>
 </html>
