--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </div>
 
         <ul>
-            <li>
+            <l>
                 <a href="#">Instagram</a>
-            </li>
+            </l>
             <li>
                 <a href="#">linkedin</a>
             </li>
@@ -35,6 +35,7 @@
                 <a href="#">Github</a>
             </li>
             <li>
+                 <a href="" target="_blank">Curriculo</a>
                 <a href="" target="_blank">Curriculo</a>
             </li>
         </ul>
